--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             }
 
             to {
-                width: 8em; 
+                width: 8em;
             }
         }
 
@@ -207,7 +207,7 @@
         .fade-in1 {
             opacity: 0;
             transition: opacity 250ms;
-           /* transition-delay: 3s;*/
+            /* transition-delay: 3s;*/
 
         }
 
@@ -249,7 +249,7 @@
             padding: 20px;
             overflow: -moz-hidden-unscrollable;
             margin-right: 5vw;
-            /*margin: auto; 8*/ 
+            /*margin: auto; 8*/
             /*width: 85vw; */
             float: center;
             margin-left: 5vw;
@@ -431,9 +431,9 @@
             /* display: flex;*/
             justify-content: center;
             align-items: center;
-           /* height: 25em;*/
-            height: auto; 
-            width: auto; 
+            /* height: 25em;*/
+            height: auto;
+            width: auto;
             /*need to fix image proportions across different devices*/
             border: 1em solid #0000;
             border-radius: 50%;
@@ -442,7 +442,7 @@
                     #011f2f) border-box;
             animation: rotate 5s linear infinite;
             overflow: hidden;
-            margin: auto; 
+            margin: auto;
         }
 
         .box img {
@@ -586,10 +586,10 @@
             /* display: flex;*/
             justify-content: center;
             align-items: center;
-           /* height: 40em; 
+            /* height: 40em; 
             width: 40em; */
             /*width: auto; */
-            height: auto; 
+            height: auto;
             border: 1em solid #0000;
             border-radius: 50%;
             background: linear-gradient(#FB8500, #011f2f) padding-box, linear-gradient(var(--angle),
@@ -597,8 +597,8 @@
                     #011f2f) border-box;
             animation: rotate 5s linear infinite;
             overflow: hidden;
-            text-align: center; 
-            margin: auto; 
+            text-align: center;
+            margin: auto;
             /*margin-top: 10vh;*/
         }
 
@@ -606,7 +606,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            text-align: center; 
+            text-align: center;
             border-radius: 50%;
         }
 
@@ -615,16 +615,19 @@
         }
 
         .right-inline {
-            display: flex; flex-grow: 1; 
+            display: flex;
+            flex-grow: 1;
         }
 
-        .flex-container { display: flex; }
+        .flex-container {
+            display: flex;
+        }
 
-        .next-to{ 
-            flex: 1; 
+        .next-to {
+            flex: 1;
             /*margin: 10em; */
         }
-        </style>
+    </style>
 </head>
 
 
@@ -636,25 +639,30 @@
     <h1 class="line-1 anim-typewriter title"> SHRIYA BIDDALA </h1>
     <div class="roles"> A.I.-Nerd Engineer Student Web-Developer Equity-Activist Tech-Enthusiast</div>
 
-    <div class = "flex-container"> 
-    <div class="next-to fade-in1 left-oriented"
-        style="margin: auto; margin-top: 10vh; margin-right: 10vw; margin-left: 5vw;"> 
-        
-        <h2> ABOUT ME </h2>
-        <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
-            Science. I have partaken in multiple research projects at the university level, notably developing a mental
-            chatbot, on top of engineering, such as developing the bionic knee with Texas Instruments technology and
-            Lego Mindstromer bricks. <br> My interests lie within artificial intelligence and it's promissing
-            applications in different industries, such as cloud computing, intelligent devices, and data science. <br> I
-            also am a big equity activist who pushes for equity and diversity in the technology sector and aspires to
-            combine both my technological and activist background to develop real-world tecnological, equitable
-            solutions. </p>
-    </div>
+    <div class="flex-container">
+        <div class="next-to fade-in1 left-oriented"
+            style="margin: auto; margin-top: 10vh; margin-right: 10vw; margin-left: 5vw;">
 
-    <div class="next-to fade-in1 box" style = "align-self: center; margin-bottom: 20vh; margin-right: 5vw; margin-top: 10vh;">
-        <img src="shriya_pfp.png">
-        <!--style="transition-delay: 2.5s;"-->
-    </div>
+            <h2> ABOUT ME </h2>
+            <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
+                Science. I have partaken in multiple research projects at the university level, notably developing a
+                mental
+                chatbot, on top of engineering, such as developing the bionic knee with Texas Instruments technology and
+                Lego Mindstromer bricks. <br> My interests lie within artificial intelligence and it's promissing
+                applications in different industries, such as cloud computing, intelligent devices, and data science.
+                <br> I
+                also am a big equity activist who pushes for equity and diversity in the technology sector and aspires
+                to
+                combine both my technological and activist background to develop real-world tecnological, equitable
+                solutions.
+            </p>
+        </div>
+
+        <div class="next-to fade-in1 box"
+            style="align-self: center; margin-bottom: 20vh; margin-right: 5vw; margin-top: 10vh;">
+            <img src="shriya_pfp.png">
+            <!--style="transition-delay: 2.5s;"-->
+        </div>
     </div>
 
     <!-- <div class="fade-in2 right-oriented">
@@ -724,7 +732,7 @@
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
-            <div class = "center-inline" style = "align-self: auto; margin-left: 3vw;">
+            <div class="center-inline" style="align-self: auto; margin-left: 3vw;">
                 <span class="dot" onclick="currentSlide(1)"></span>
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
@@ -733,32 +741,33 @@
             </div>
         </div>
 
-        <div class = "next-to"> 
-        <div class=" fade-in2 box2" style = "margin-top: 20vh;">
-        <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
-    </div> </div>
- 
-       <!-- <div class="next-to">
+        <div class="next-to">
+            <div class=" fade-in2 box2" style="margin-top: 20vh;">
+                <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
+            </div>
+        </div>
+
+        <!-- <div class="next-to">
             <div class="fade-in2 box2" style="margin-top: 10vh;"> </div>
             <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
         </div> -->
-            <div class="next-to fade-in2 right-oriented" style="margin: auto; margin-left: 3vw; margin-right: 5vw;">
-                <h2> EDUCATION </h2>
-                <p> University of Michigan - Ann Arbor </p>
-                <p> Bachelor of Science in Computer Science </p>
-                <p> GPA: 3.675 </p>
-                <p> Expected Graduation: April 2026 </p>
-                <p> Coursework: <br> EECS 280: Programming and Data Structures <br> EECS 203: Discrete Mathematics <br>
-                    ENGR
-                    100: Robotics Mechanisms <br> ROB 101: Computational Linear Algebra <br> EECS 281: Data Structures
-                    and
-                    Algorithms
-                    <br> EECS 201: Computer Science Pragmatics
-                </p>
-                <p> Activities: Google Student Developer Club, Miss STEM Careers </p>
+        <div class="next-to fade-in2 right-oriented" style="margin: auto; margin-left: 3vw; margin-right: 5vw;">
+            <h2> EDUCATION </h2>
+            <p> University of Michigan - Ann Arbor </p>
+            <p> Bachelor of Science in Computer Science </p>
+            <p> GPA: 3.675 </p>
+            <p> Expected Graduation: April 2026 </p>
+            <p> Coursework: <br> EECS 280: Programming and Data Structures <br> EECS 203: Discrete Mathematics <br>
+                ENGR
+                100: Robotics Mechanisms <br> ROB 101: Computational Linear Algebra <br> EECS 281: Data Structures
+                and
+                Algorithms
+                <br> EECS 201: Computer Science Pragmatics
+            </p>
+            <p> Activities: Google Student Developer Club, Miss STEM Careers </p>
         </div>
     </div>
-    <br> 
+    <br>
     <br>
 
     <!-- <div class=" fade-in2 left-oriented" style="margin-top: 5vh;">
@@ -777,7 +786,7 @@
 
 
 
-    <div class="fade-in2 center fa-3x" style = "margin-top: 20vh;">
+    <div class="fade-in2 center fa-3x" style="margin-top: 20vh;">
         <h2 style="text-align: center; font-size: 1em;" id="Contact"> Let's Connect <br> </h2>
         <br>
         <a href="https://www.instagram.com/shriya_bi/"><i class="fab fa-instagram fa-bounce fa-2x"
@@ -802,4 +811,4 @@
     <script src="Home.js"> </script>
 </body>
 
-</html>ß
+</html>
