--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
     <h1 class="line-1 anim-typewriter title"> SHRIYA BIDDALA </h1>
     <div class="roles"> A.I.-Nerd Engineer Student Web-Developer Equity-Activist Tech-Enthusiast</div>
 
-    <div class="container" style = "margin-top: 40vh;"">
+    <div class="container" style = "margin-top: 40vh; margin: auto;"">
         <div class="fade-in1 left-oriented" style="width:50vw; margin:auto;  margin-left: 5vw;">
 
             <h2> ABOUT ME </h2>
