--- a/index.html
+++ b/index.html
@@ -328,20 +328,20 @@
 
 
             .fa-instagram {
-                color: #FFB703;
+                color: #c99b26;
             }
 
             .fa-linkedin {
-                color: #FFB703;
+                color: #c99b26;
             }
 
             .fa-google {
-                color: #FFB703;
+                color: #c99b26;
                 cursor: pointer;
             }
 
             .fa-github {
-                color: #FFB703;
+                color: #c99b26;
                 transition: 0.1s;
             }
 
@@ -678,18 +678,31 @@
             }
 
             .project-text {
-                font-size: 1.5em; color: #FB8500; text-align: left; padding-top: 5px; padding-left: 5px; 
+                font-size: 1.5em;
+                color: #FB8500;
+                text-align: left;
+                padding-top: 5px;
+                padding-left: 5px;
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
                 font-family: 'Raleway', sans-serif;
                 font-family: 'Roboto Condensed', sans-serif;
             }
 
-            .skill-text{
-                font-size: 1.5em; 
-                color: #FFB703; 
-                text-align: left;  
+            .skill-text {
+                font-size: 1.5em;
+                color: #FFB703;
+                text-align: left;
                 padding-left: 5px;
+            }
+
+            .contact {
+                background-color: #8ECAE6; 
+                box-shadow: 0 0 2em #219EBC;
+                text-align: center;
+                width: 100%;
+                top: 100px;
+                position: relative;
             }
         }
     </style>
@@ -704,36 +717,36 @@
     <h1 class="line-1 anim-typewriter title"> SHRIYA BIDDALA </h1>
     <div class="roles"> A.I.-Nerd Engineer Student Web-Developer Equity-Activist Tech-Enthusiast</div>
 
-    <div class="container" style = "margin-top: 40vh; margin: auto;"">
-        <div class="fade-in1 left-oriented" style="width:50vw; margin:auto;  margin-left: 5vw;">
+    <div class="container" style="margin-top: 40vh;">
+        <div class=" fade-in1 left-oriented" style="width:50vw; margin:auto;  margin-left: 5vw;">
 
-            <h2> ABOUT ME </h2>
-            <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
-                Science. I have partaken in multiple research projects at the university level, notably developing a
-                mental
-                chatbot, on top of engineering, such as developing the bionic knee with Texas Instruments technology and
-                Lego Mindstromer bricks. <br> My interests lie within artificial intelligence and it's promissing
-                applications in different industries, such as cloud computing, intelligent devices, and data science.
-                <br> I
-                also am a big equity activist who pushes for equity and diversity in the technology sector and aspires
-                to
-                combine both my technological and activist background to develop real-world tecnological, equitable
-                solutions.
-            </p>
-        </div>
-
-        <div class="fade-in1 box"
-            style="align-self: center; transform: translateX(30%);">
-            <img src="shriya_pfp.png">
-            <!--style="transition-delay: 2.5s;"-->
-        </div>
+        <h2> ABOUT ME </h2>
+        <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
+            Science. I have partaken in multiple research projects at the university level, notably developing a
+            mental
+            chatbot, on top of engineering, such as developing the bionic knee with Texas Instruments technology and
+            Lego Mindstromer bricks. <br> My interests lie within artificial intelligence and it's promissing
+            applications in different industries, such as cloud computing, intelligent devices, and data science.
+            <br> I
+            also am a big equity activist who pushes for equity and diversity in the technology sector and aspires
+            to
+            combine both my technological and activist background to develop real-world tecnological, equitable
+            solutions.
+        </p>
     </div>
 
-    <div class = "flex-container" style ="margin-top: 40vh; margin-left: 7vw;"> 
+    <div class="fade-in1 box" style="align-self: center; transform: translateX(30%);">
+        <img src="shriya_pfp.png">
+        <!--style="transition-delay: 2.5s;"-->
+    </div>
+    </div>
+
+    <div class="flex-container" style="margin-top: 40vh; margin-left: 7vw;">
         <div class=" fade-in2 box2" style="float: left;">
             <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
         </div>
-        <div class="fade-in2 right-oriented" style="float: right; margin-right: 5vw; width: 35vw; transform: translateX(25%);">
+        <div class="fade-in2 right-oriented"
+            style="float: right; margin-right: 5vw; width: 35vw; transform: translateX(25%);">
             <h2> EDUCATION </h2>
             <p> University of Michigan - Ann Arbor </p>
             <p> Bachelor of Science in Computer Science </p>
@@ -748,7 +761,7 @@
             </p>
             <p> Activities: Google Student Developer Club, Miss STEM Careers </p>
         </div>
-    </div> 
+    </div>
 
 
     <h2 class="fade-in2" style="margin-top: 40vh; text-align: center;" id="Projects">PROJECTS</h2>
@@ -763,7 +776,8 @@
             <iframe style="width: 15vw; height: 15vh; color:rgb(197, 105, 1);"
                 src="https://www.wevideo.com/view/3252017933" style="margin: auto; margin-top: 2vh;"> </iframe>
             <br>
-            <p style="font-size: 0.75em; color: #FB8500; text-align: left; padding-top: 5px; padding-left: 5px;"> SKILLS:
+            <p style="font-size: 0.75em; color: #FB8500; text-align: left; padding-top: 5px; padding-left: 5px;">
+                SKILLS:
             </p>
             <p style="font-size: 0.75em; color: #FFB703; text-align: left; padding-left: 5px;"> PyTorch, Kaggle,
                 Cloud-instance, Google Search API</p>
@@ -776,47 +790,64 @@
             <iframe style="width: 15vw; height: 15vh; color:rgb(197, 105, 1);"
                 src="https://www.youtube.com/embed/AcX9qemFgyg" style="margin: auto; margin-top: 2vh;"> </iframe>
             <br>
-            <p style="font-size: 0.75em; color: #FB8500; text-align: left; padding-top: 5px; padding-left: 5px;"> SKILLS:
+            <p style="font-size: 0.75em; color: #FB8500; text-align: left; padding-top: 5px; padding-left: 5px;">
+                SKILLS:
             </p>
             <p style="font-size: 0.75em; color: #FFB703; text-align: left; padding-left: 5px;"> Electrical Circuits,
                 Python, Programming </p>
         </div>
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> OneVote</h3>
-            <p style="font-size: 1em;"> A web application designed to raise awareness about local elections and policies among young adults. Features an conversational agent for answering questions and a page to guide users to local polling stations, provide information on ongoing elections, and access websites of current and new candidates. </p>
+            <p style="font-size: 1em;"> A web application designed to raise awareness about local elections and policies
+                among young adults. Features an conversational agent for answering questions and a page to guide users
+                to local polling stations, provide information on ongoing elections, and access websites of current and
+                new candidates. </p>
             <iframe style="width: 15vw; height: 15vh; color:rgb(197, 105, 1);"
                 src="https://www.youtube.com/embed/-eGkraEZ6HA" style="margin: auto; margin-top: 2vh;"> </iframe>
             <br>
-            <p style="font-size: 0.75em; color: #FB8500; text-align: left; padding-top: 5px; padding-left: 5px;"> SKILLS: 
+            <p style="font-size: 0.75em; color: #FB8500; text-align: left; padding-top: 5px; padding-left: 5px;">
+                SKILLS:
             </p>
             <p style="font-size:0.75em; color: #FFB703; text-align: left; padding-left: 5px;"> Electrical Circuits,
                 Python, Programming </p>
         </div>
     </div>
-    <div class="flex-container fade-in2"
-        style="margin-left: 5vw; margin-right: 5vw; margin: auto; align-self: center;">
-        <div class="project-box" style = "margin-top: 5vh;">
+    <div class="flex-container fade-in2" style="margin-left: 5vw; margin-right: 5vw; margin: auto; align-self: center;">
+        <div class="project-box" style="margin-top: 5vh;">
             <h3 style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
-            <p style="font-size: 1em;"> An application with a visually-appleasing user interface with an integrated model developed using OpenCV and PyTorch to detect handwritten components and convert into a .txt file. </p>
-           <br> 
-            <p class = "project-text"> SKILLS: <p class = "skill-text"> OpenCV, PyTorch, HTML/CSS </p> </p>
-            
+            <p style="font-size: 1em;"> An application with a visually-appleasing user interface with an integrated
+                model developed using OpenCV and PyTorch to detect handwritten components and convert into a .txt file.
+            </p>
+            <br>
+            <p class="project-text"> SKILLS:
+            <p class="skill-text"> OpenCV, PyTorch, HTML/CSS </p>
+            </p>
+
         </div>
-        <div class="project-box" style = "margin-top: 5vh;">
+        <div class="project-box" style="margin-top: 5vh;">
             <h3 style="color: #dcf4fc; margin: auto;"> PenguJump </h3>
-            <p style="font-size: 1em;"> An interactive game developed with GreenFoot API and Java utilizing object-oriented programming and inheritance. </p>
+            <p style="font-size: 1em;"> An interactive game developed with GreenFoot API and Java utilizing
+                object-oriented programming and inheritance. </p>
             <br>
-            <p style="font-size: 0.75em; color: #FB8500; text-align: left;  padding-top: 5px; padding-left: 5px;"> SKILLS: <p style="font-size: 0.75em; color: #FFB703; text-align: left;"> GreenFootAPI, Java, Object-Oriented Programming </p>
+            <p style="font-size: 0.75em; color: #FB8500; text-align: left;  padding-top: 5px; padding-left: 5px;">
+                SKILLS:
+            <p style="font-size: 0.75em; color: #FFB703; text-align: left;"> GreenFootAPI, Java, Object-Oriented
+                Programming </p>
             </p>
-            
+
         </div>
-        <div class="project-box" style = "margin-top: 5vh;">
-            <h3 style="color: #dcf4fc; margin: auto;"> STEM/GRAD+ Initiative for Underrepresented Students in Boulder Valley School District </h3>
-            <p style="font-size: 1em;">Led STEM Initiative for Underrepresented Youth, proposing exclusive internships via BVSD partnerships. Drafted ideas for CU Boulder grant to fund resources (calculators, tutoring, engineering kits) for under-resourced schools. </p>
+        <div class="project-box" style="margin-top: 5vh;">
+            <h3 style="color: #dcf4fc; margin: auto;"> STEM/GRAD+ Initiative for Underrepresented Students in Boulder
+                Valley School District </h3>
+            <p style="font-size: 1em;">Led STEM Initiative for Underrepresented Youth, proposing exclusive internships
+                via BVSD partnerships. Drafted ideas for CU Boulder grant to fund resources (calculators, tutoring,
+                engineering kits) for under-resourced schools. </p>
             <br>
-            <p style="font-size: 0.75em; color: #FB8500; text-align: left;   padding-top: 5px; padding-left: 5px;"> SKILLS:
+            <p style="font-size: 0.75em; color: #FB8500; text-align: left;   padding-top: 5px; padding-left: 5px;">
+                SKILLS:
             </p>
-            <p style="font-size: 0.75em; color: #FFB703; text-align: left;  padding-left: 5px;"> Leadership, Presentation, Collaboration </p>
+            <p style="font-size: 0.75em; color: #FFB703; text-align: left;  padding-left: 5px;"> Leadership,
+                Presentation, Collaboration </p>
         </div>
     </div>
 
@@ -830,7 +861,8 @@
                         href="https://www.aspirations.org/2023-national-aspirations-in-computing-award-recipients-announced/"
                         class="link-blue">
                         NCWIT AiC 2023 National Honorable Mention </a> </h3>
-                <p style="text-align: center; padding-top: 30px;"> Awarded to 360 women/nonbinary technology enthusiasts from all over
+                <p style="text-align: center; padding-top: 30px;"> Awarded to 360 women/nonbinary technology enthusiasts
+                    from all over
                     the
                     country who have displayed
                     exceptional achievement, aptitude, engagement, and initiative in computing. </p>
@@ -841,7 +873,8 @@
                 <h3 style="margin-top: -0%; text-align: center;"> <a href="
         https://education.ti.com/en/promotion/codescontest/2021/" class="link-blue"> 2021 Texas Instruments Codes
                         Contest </a> </h3>
-                <p style="text-align: center; padding-top: 30px;"> One of five teams who recieved an honorable mention in the finalist
+                <p style="text-align: center; padding-top: 30px;"> One of five teams who recieved an honorable mention
+                    in the finalist
                     round,
                     and selected from 64 teams
                     through four rounds of development in the contest. </p>
@@ -892,8 +925,8 @@
 
 
 
-    <div class="fade-in2 center fa-3x">
-        <h2 style="text-align: center; font-size: 1em;" id="Contact"> Let's Connect <br> </h2>
+    <div class="fade-in2 fa-3x contact" style = "margin-top: 40vh;">
+        <h2 style="text-align: center; font-size: 1em; padding: 2em; color:rgb(194, 103, 0)" id="Contact"> Let's Connect <br> </h2>
         <br>
         <a href="https://www.instagram.com/shriya_bi/"><i class="fab fa-instagram fa-bounce fa-2x"
                 style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;">
@@ -911,6 +944,8 @@
             font-family: 'Poppins', sans-serif; font-family: 'Raleway', sans-serif;  font-family: 'Roboto Condensed', sans-serif; border-radius: 6px; box-shadow: 0 0 4em #023047;">
                 School email: sbiddala@umich.edu <br> Personal email: shriyarbiddala@gmail.com</span>
         </i>
+        <br>
+        <p style="color:#023047; font-size: 0.5em; text-align: left; padding-left: 0.625em; padding-bottom: 0.625em;"> &copy;Shriya Biddala</p>
     </div>
 
 
