--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/fa913dc807.js" crossorigin="anonymous"></script>
 
     <style>
-        @media only screen and (min-width: 768px) {
+        @media only screen and (min-width: 768px) and (max-width: 1098px) {
             .container {
                 display: inline-flex;
             }
